finished initial draft of home.html and page 1 and 2 of the website

--- a/home.html
+++ b/home.html
@@ -13,13 +13,13 @@
     <main>
         <article>
             <h3>Indoor Climbing</h3>
-            <p>ndoor climbing is a popular, accessible, and safe activity that involves ascending artificial walls equipped with manufactured, colored, and modular holds (grips) designed to mimic outdoor rock faces.</p>
+            <p>Indoor climbing is a popular, accessible, and safe activity that involves ascending artificial walls equipped with manufactured, colored, and modular holds (grips) designed to mimic outdoor rock faces.</p>
             <img
-            src = ".img/rockwall"
+            src = \img\Rockwall.jpg
             alt = "An image of an indoor rock wall"
             width="50%"/>
         <section>
-        <p>Learn more about indoor rock climbing<a href = "https://en.wikipedia.org/wiki/Climbing_gym">Tyler The Creator</a></p>
+        <p>Learn more about indoor <a href = "https://en.wikipedia.org/wiki/Climbing_gym"> climbing gyms</a></p>
         <p>Favorite gyms in the area</p>
         <ul>
         <li>Climb Iowa</li>
@@ -35,8 +35,8 @@
     </section>
     <h2>See my other favorite climbers</h2> 
   <ul>
-    <li><a href="./Ladygaga.html">Lady Gaga</a>
-    </li> <li><a href="./Nina.html">Nina Simone</a></li>
+    <li><a href="./janja.html">Janja Garnbret</a>
+    </li> <li><a href="./sorato.html">Sorato Anraku</a></li>
   </ul>
 </body>
 
