--- a/home.html
+++ b/home.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Climbing Page</title>
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
-    <header>
+    <header id="main_page_header">
     <h1>My climbing page</h1>
     <p>This is a page about intresting people and tools in climbing!</p>
     </header>
-    <main>
+    <main id = "page1_content">
         <article>
             <h3>Indoor Climbing</h3>
             <p>Indoor climbing is a popular, accessible, and safe activity that involves ascending artificial walls equipped with manufactured, colored, and modular holds (grips) designed to mimic outdoor rock faces.</p>
@@ -18,7 +19,9 @@
             src = \img\Rockwall.jpg
             alt = "An image of an indoor rock wall"
             width="50%"/>
-        <section>
+        <div id="song_album_wrapper">
+        <section id = "Info">
+        
         <p>Learn more about indoor <a href = "https://en.wikipedia.org/wiki/Climbing_gym"> climbing gyms</a></p>
         <p>Favorite gyms in the area</p>
         <ul>
@@ -26,19 +29,21 @@
         <li>Blue Stem Boulders</li>
         </ul>
     </section>  
-    <section>
+    <section id = "Climbers">
     <p>Best Rock Climbers</p>
     <ol>
         <li>Adam Ondra</li>
         <li>Will Bosi</li>
     </ol>
+    </div>
     </section>
+    <nav id="footer">
     <h2>See my other favorite climbers</h2> 
   <ul>
     <li><a href="./janja.html">Janja Garnbret</a>
     </li> <li><a href="./sorato.html">Sorato Anraku</a></li>
   </ul>
 </body>
-
 </body>
 </html>
+</nav>
