--- a/sorato.html
+++ b/sorato.html
@@ -1,3 +1,5 @@
+<head><link rel="stylesheet" href="style.css">
+</head>
 <body>
   <h3>Sorato anraku</h3>
   <p>Go <a href = "home.html">Home</a></p>
