--- a/janja.html
+++ b/janja.html
@@ -1,3 +1,5 @@
+<head><link rel="stylesheet" href="style.css">
+</head>
 <body>
   <h3>Janja Garnbret</h3>
   <p>Go <a href = "home.html">Home</a></p>
